bunch of bugs, visible emotion bars on keywords, tighten each meta info in list from labels, remove admin toggle on invert_toggle, fix keyboard admin toggle , show watson in full width on event, embed link on group page, need for user/profile, make single_user edit inline if picked, image label instead of head in label,

--- a/client/s.css
+++ b/client/s.css
@@ -5,9 +5,9 @@ body {
     /*font-family: 'Ubuntu', sans-serif !important;*/
     /*font-family: 'Goudy Bookletter 1911', sans-serif !important;*/
     font-size: 110% !important; 
-    animation: fadeInAnimation ease 3s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
+    /*animation: fadeInAnimation ease 3s;*/
+    /*animation-iteration-count: 1;*/
+    /*animation-fill-mode: forwards;*/
     
     /*line-height: 200% !important;*/
     /*filter: invert(.9) !important;*/
